Don't crash if we can't load column preferences

https://bugzilla.gnome.org/show_bug.cgi?id=662131